🧪 Github Actions for running unit tests! Test fix.
- adds some additional compiler warnings
- a few warning fixes
- adds gb action permissions for the dorny publish system to work
- adds build status to readme

--- a/platformio.ini
+++ b/platformio.ini
@@ -4,7 +4,12 @@ platform = native
 build_type = test
 test_framework = googletest
 build_flags =
-    -std=gnu++2a -DTESTENV
+    -std=c++17
+    -DTESTENV
+    -Wall
+    -Wextra
+    -pedantic
+    -Wno-unused-parameter
 lib_deps =
     googletest
     ; ArduinoFake
